docs/api/0.2.2-beta/ironwood/ds/LinkedList.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.2\-beta**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# LinkedList

**Class** · `ironwood.ds.LinkedList`

```java
public class LinkedList<E extends Object> implements Iterable<E>
```

**Implements:** [`Iterable<E>`](../lang/Iterable.md)

Provides a doubly linked list.


## Member summary

[Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`LinkedList(int)`](#member-LinkedList-28-int-29-) | Creates a new LinkedList. |
| [`getInitialCapacity()`](#member-getInitialCapacity-28--29-) | Returns the initial capacity. |
| [`clear()`](#member-clear-28--29-) | Removes all stored values. |
| [`addFirst(E)`](#member-addFirst-28-E-29-) | Adds the supplied first. |
| [`add(E)`](#member-add-28-E-29-) | Adds the supplied value. |
| [`addLast(E)`](#member-addLast-28-E-29-) | Adds the supplied last. |
| [`first()`](#member-first-28--29-) | Performs the first operation. |
| [`removeFirst()`](#member-removeFirst-28--29-) | Performs the remove first operation. |
| [`last()`](#member-last-28--29-) | Performs the last operation. |
| [`removeLast()`](#member-removeLast-28--29-) | Performs the remove last operation. |
| [`contains(E)`](#member-contains-28-E-29-) | Returns whether the supplied value is present. |
| [`isEmpty()`](#member-isEmpty-28--29-) | Returns whether this value is empty. |
| [`size()`](#member-size-28--29-) | Returns the number of stored values. |
| [`equals(Object)`](#member-equals-28-Object-29-) | Tests this value for equality with another object. |
| [`hashCode()`](#member-hashCode-28--29-) | Returns this value's hash code. |
| [`toString()`](#member-toString-28--29-) | Returns a textual representation of this value. |
| [`iterator()`](#member-iterator-28--29-) | Returns an iterator over this value's elements. |

## Constructors

<a name="member-LinkedList-28-int-29-"></a>

### `LinkedList(int)`

```java
public LinkedList(int initialCapacity)
```

Creates a new LinkedList.


[Back to member summary](#member-summary)

## Methods

<a name="member-getInitialCapacity-28--29-"></a>

### `getInitialCapacity()`

```java
public int getInitialCapacity()
```

Returns the initial capacity.


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```

Removes all stored values.


[Back to member summary](#member-summary)

<a name="member-addFirst-28-E-29-"></a>

### `addFirst(E)`

```java
public void addFirst(E value)
```

Adds the supplied first.


[Back to member summary](#member-summary)

<a name="member-add-28-E-29-"></a>

### `add(E)`

```java
public void add(E value)
```

Adds the supplied value.


[Back to member summary](#member-summary)

<a name="member-addLast-28-E-29-"></a>

### `addLast(E)`

```java
public void addLast(E value)
```

Adds the supplied last.


[Back to member summary](#member-summary)

<a name="member-first-28--29-"></a>

### `first()`

```java
public E first()
```

Performs the first operation.


[Back to member summary](#member-summary)

<a name="member-removeFirst-28--29-"></a>

### `removeFirst()`

```java
public E removeFirst()
```

Performs the remove first operation.


[Back to member summary](#member-summary)

<a name="member-last-28--29-"></a>

### `last()`

```java
public E last()
```

Performs the last operation.


[Back to member summary](#member-summary)

<a name="member-removeLast-28--29-"></a>

### `removeLast()`

```java
public E removeLast()
```

Performs the remove last operation.


[Back to member summary](#member-summary)

<a name="member-contains-28-E-29-"></a>

### `contains(E)`

```java
public boolean contains(E value)
```

Returns whether the supplied value is present.


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```

Returns whether this value is empty.


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```

Returns the number of stored values.


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```

Tests this value for equality with another object.


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```

Returns this value's hash code.


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```

Returns a textual representation of this value.


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<E> iterator()
```

Returns an iterator over this value's elements.


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
